<resources>
    <string name="app_name">Hybrid ICN Network Service</string>
    <string name="source">Source</string>
    <string name="source_ip">IP</string>
    <string name="source_port">Port</string>
    <string name="next_hop">Next Hop</string>
    <string name="next_hop_ip">IP</string>
    <string name="next_hop_port">Port</string>
    <string name="route">Route</string>
    <string name="prefix">Prefix</string>
    <string name="netmask">Netmask</string>
    <string name="configuration">Configuration</string>
    <string name="capacity">Capacity [bytes]</string>
    <string name="APP_MENU_FACES">Faces</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="cache_size_summary">Cache Size</string>
    <string name="cache_size_title">Cache Size</string>
    <string name="cache_size_key">cache_size</string>
    <string name="default_cache_size">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forwarder_preference_category">Forwarder</string>
    <string name="face_management_preference_category">Face Management</string>
    <string name="face_type_key">face_type</string>
    <string name="default_face_type">Overlay UDP</string>
    <string name="face_type_list_preference">Face Type</string>
    <string name="native_tcp">Native TCP</string>
    <string name="native_udp">Native UDP</string>
    <string name="overlay_tcp">Overlay TCP</string>
    <string name="overlay_udp">Overlay UDP</string>
    <string name="overlay_discovery_list_preference">Overlay Discovery</string>
    <string name="manual">Manual</string>
    <string name="bonjour">Bonjour</string>
    <string name="overlay_discovery_key">overlay_discovery</string>
    <string name="default_overlay_discovery">Manual</string>
    <string name="overlay_manual_configuration_preference_category">Overlay Manual Configuration</string>
    <string name="nexthop_address_ipv4">Next Hop Address IPv4</string>
    <string name="nexthop_port_ipv4">Next Hop Port IPv4</string>
    <string name="nexthop_address_ipv4_key">nexthop_address_ipv4</string>
    <string name="enable_nexthop_ipv4_key">enable_nexthop_ipv4</string>
    <string name="enable_nexthop_ipv6_key">enable_nexthop_ipv6</string>
    <string name="enable_nexthop_ipv4">aaaa</string>
    <string name="nexthop_port_ipv4_key">nexthop_port_ipv4</string>
    <string name="nexthop_address_ipv6">Next Hop Address IPv6</string>
    <string name="nexthop_address_ipv6_key">nexthop_address_ipv6</string>
    <string name="nexthop_port_ipv6">Next HopPort IPv6</string>
    <string name="nexthop_port_ipv6_key">port_ipv6</string>
    <string name="forwarder">Forwarder</string>
    <string name="interfaces">Interfaces</string>
    <string name="applications">Applications</string>
    <string name="hicn_is_disabled">hICN is Disabled</string>
    <string name="wifi">WiFi</string>
    <string name="radio">Radio</string>
    <string name="wired">Wired</string>
    <string name="default_ipv4">10.20.30.40</string>
    <string name="default_ipv6">ffff::1</string>
    <string name="default_port">9695</string>
    <string name="preferences">Preferences</string>
    <string name="leanback_preferences">Leanback Preferences</string>
    <string name="car_preferences">Car Preferences</string>
    <string name="basic_preferences">Basic attributes</string>
    <string name="title_basic_preference">Preference</string>
    <string name="summary_basic_preference">Simple preference with no special attributes</string>
    <string name="title_stylish_preference"><b>Very</b> <i>stylish</i> <u>preference</u></string>
    <string name="summary_stylish_preference">Define style tags such as &lt;b&gt; in a string resource to customize a preference\'s text</string>
    <string name="title_icon_preference">Icon preference</string>
    <string name="summary_icon_preference">Define a drawable to display it at the start of the preference</string>
    <string name="title_single_line_title_preference">Single line title preference - no matter how long the title is it will never wrap to multiple lines</string>
    <string name="summary_single_line_title_preference">This title will be ellipsized instead of wrapping to another line</string>
    <string name="widgets">Widgets</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">Tap anywhere in this preference to toggle state</string>
    <string name="title_switch_preference">Switch preference</string>
    <string name="summary_switch_preference">Tap anywhere in this preference to toggle state</string>
    <string name="title_dropdown_preference">Dropdown preference</string>
    <string name="title_seekbar_preference">Seekbar preference</string>
    <string name="dialogs">Dialogs</string>
    <string name="title_edittext_preference">EditText preference</string>
    <string name="dialog_title_edittext_preference">This title can be changed!</string>
    <string name="title_list_preference">List preference</string>
    <string name="dialog_title_list_preference">Choose one option!</string>
    <string name="title_multi_list_preference">Multi-select list preference</string>
    <string name="summary_multi_list_preference">Shows a dialog with multiple choice options</string>
    <string name="dialog_title_multi_list_preference">Choose some options!</string>
    <string name="advanced_attributes">Advanced attributes</string>
    <string name="title_expandable_preference">Expandable preference group</string>
    <string name="summary_expandable_preference">This group shows one item and collapses the rest into the advanced button below</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an intent when pressed</string>
    <string name="title_parent_preference">Parent preference</string>
    <string name="summary_parent_preference">Toggling this preference will change the enabled state of the preference below</string>
    <string name="title_child_preference">Child preference</string>
    <string name="summary_child_preference">The enabled state of this preference is controlled by the preference above</string>
    <string name="title_toggle_summary_preference">Variable summary preference</string>
    <string name="wifi_preference_title">WiFi Configuration</string>
    <string name="wifi_preference_summary">Configure WiFi Parameters</string>
    <string name="cellular_preference_title">Cellular Configuration</string>
    <string name="cellular_preference_summary">Configure Cellular Parameters</string>
    <string name="wired_preference_title">Wired Configuration</string>
    <string name="wired_preference_summary">Configure Wired Parameters</string>
    <string name="enable_nexthop_ipv4_summary">Enable IPv4</string>
    <string name="enable_nexthop_ipv4_title">Enable IPv4</string>
    <string name="enable_nexthop_ipv6_summary">Enable IPv6</string>
    <string name="enable_nexthop_ipv6_title">Enable IPv6</string>
    <string name="wired_ipv4_preferences_summary">Configure IPv4</string>
    <string name="wired_ipv6_preferences_summary">Configure IPv6</string>
    <string name="wired_ipv4_preferences_key">wired_ipv4_preferences_key</string>
    <string name="wired_ipv6_preferences_key">wired_ipv6_preferences_key</string>
    <string name="enable_bonjour_summary">Enable Bonjour</string>
    <string name="enable_bonjour_title">Enable Bonjour</string>
    <string name="enable_bonjour_key">enable_bonjour_key</string>
    <string name="wifi_ipv4_preference_title">WiFi IPv4</string>
    <string name="default_wifi_source_port_ipv4">9695</string>
    <string name="wifi_source_port_ipv4_key">wifi_source_port_ipv4_key</string>
    <string name="wifi_source_port_ipv4_summary">Source Port</string>
    <string name="wifi_source_port_ipv4_title">Source Port</string>
    <string name="default_wifi_nexthop_ipv4">10.20.30.40</string>
    <string name="wifi_nexthop_ipv4_key">wifi_nexthop_ipv4_key</string>
    <string name="wifi_nexthop_ipv4_summary">Next Hop</string>
    <string name="wifi_nexthop_ipv4_title">Next Hop</string>
    <string name="default_wifi_nexthop_port_ipv4">9695</string>
    <string name="wifi_nexthop_port_ipv4_key">wifi_nexthop_port_ipv4_key</string>
    <string name="wifi_nexthop_port_ipv4_summary">Next Hop Port</string>
    <string name="wifi_nexthop_port_ipv4_title">Next Hop Port</string>
    <string name="wired_ipv4_preference_title">Wired IPv4</string>
    <string name="default_wired_source_port_ipv4">9695</string>
    <string name="wired_source_port_ipv4_key">wired_source_port_ipv4_key</string>
    <string name="wired_source_port_ipv4_summary">Source Port</string>
    <string name="wired_source_port_ipv4_title">Source Port</string>
    <string name="default_wired_nexthop_ipv4">10.20.30.40</string>
    <string name="wired_nexthop_ipv4_key">wired_nexthop_ipv4_key</string>
    <string name="wired_nexthop_ipv4_summary">Next Hop</string>
    <string name="wired_nexthop_ipv4_title">Next Hop</string>
    <string name="default_wired_nexthop_port_ipv4">9695</string>
    <string name="wired_nexthop_port_ipv4_key">wired_nexthop_port_ipv4_key</string>
    <string name="wired_nexthop_port_ipv4_summary">Next Hop Port</string>
    <string name="wired_nexthop_port_ipv4_title">Next Hop Port</string>
    <string name="wired_ipv6_preference_title">Wired IPv6</string>
    <string name="default_wired_source_port_ipv6">9695</string>
    <string name="wired_source_port_ipv6_key">wired_source_port_ipv6_key</string>
    <string name="wired_source_port_ipv6_summary">Source Port</string>
    <string name="wired_source_port_ipv6_title">Source Port</string>
    <string name="default_wired_nexthop_ipv6">ff::1</string>
    <string name="wired_nexthop_ipv6_key">wired_nexthop_ipv6_key</string>
    <string name="wired_nexthop_ipv6_summary">Next Hop</string>
    <string name="wired_nexthop_ipv6_title">Next Hop</string>
    <string name="default_wired_nexthop_port_ipv6">9695</string>
    <string name="wired_nexthop_port_ipv6_key">wired_nexthop_port_ipv6_key</string>
    <string name="wired_nexthop_port_ipv6_summary">Next Hop Port</string>
    <string name="wired_nexthop_port_ipv6_title">Next Hop Port</string>
    <string name="hiperf_window_size_key">hiperf_window_size_key</string>
    <string name="hiper_category">hIperf</string>
    <string name="hiperf_preferences_title">hIperf Configuration</string>
    <string name="hiperf_preferences_summary">Configure hIperf Parameters</string>
    <string name="hiperf_raaqm_beta_key">hiperf_raaqm_beta_key</string>
    <string name="default_hiperf_raaqm_beta">0.99</string>
    <string name="hiperf_raaqm_beta_summary">RAAQM Beta</string>
    <string name="hiperf_raaqm_beta_title">RAAQM Beta</string>
    <string name="default_hiperf_raaqm_drop_factor">0.003</string>
    <string name="hiperf_raaqm_drop_factor_key">hiperf_raaqm_drop_factor_key</string>
    <string name="hiperf_raaqm_drop_factor_summary">RAAQM Drop Factor</string>
    <string name="hiperf_raaqm_drop_factor_title">RAAQM Drop Factor</string>
    <string name="checkbox_false">false</string>
    <string name="enable_hiperf_window_size_key">enable_hiperf_window_size_key</string>
    <string name="enable_hiperf_window_size_title">Fixed Window Size</string>
    <string name="enable_hiperf_rtc_protocol_key">enable_hiperf_rtc_protocol_key</string>
    <string name="enable_hiperf_rtc_protocol_title">RTC Protocol</string>
    <string name="default_hiperf_window_size">10</string>
    <string name="hiperf_window_size_summary">Window Size</string>
    <string name="hiperf_window_size_title">Window Size</string>
</resources>