<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (c) 2019 Cisco and/or its affiliates.
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at:

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
   limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/forwarder_preference_category">

        <EditTextPreference
            android:inputType="numberDecimal"
            app:defaultValue="@string/default_cache_size"
            app:key="@string/cache_size_key"
            app:summary="@string/cache_size_summary"
            app:title="@string/cache_size_title"
            app:useSimpleSummaryProvider="true"></EditTextPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            app:key="@string/enable_forwarder_log_key"
            app:summary="@string/enable_forwarder_log_summary"
            app:title="@string/enable_forwarder_log_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/face_management_preference_category">


        <CheckBoxPreference
            android:defaultValue="false"
            app:key="@string/enable_bonjour_key"
            app:summary="@string/enable_bonjour_summary"
            app:title="@string/enable_bonjour_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            app:enabled="true"
            app:key="@string/enable_nexthop_ipv4_key"
            app:summary="@string/enable_nexthop_ipv4_summary"
            app:title="@string/enable_nexthop_ipv4_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            app:enabled="false"
            app:key="@string/enable_nexthop_ipv6_key"
            app:summary="@string/enable_nexthop_ipv6_summary"
            app:title="@string/enable_nexthop_ipv6_title" />

        <Preference
            app:fragment="com.cisco.hicn.forwarder.preferences.WifiPreferencesFragment"
            app:summary="@string/wifi_preference_summary"
            app:title="@string/wifi_preference_title" />

        <Preference
            app:fragment="com.cisco.hicn.forwarder.preferences.CellularPreferencesFragment"
            app:summary="@string/cellular_preference_summary"
            app:title="@string/cellular_preference_title" />

        <Preference
            app:fragment="com.cisco.hicn.forwarder.preferences.WiredPreferencesFragment"
            app:summary="@string/wired_preference_summary"
            app:title="@string/wired_preference_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/hiper_category">
        <Preference
            app:fragment="com.cisco.hicn.forwarder.preferences.HiperfPreferencesFragment"
            app:summary="@string/hiperf_preferences_summary"
            app:title="@string/hiperf_preferences_title" />
    </PreferenceCategory>

</PreferenceScreen>