<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/wired_ipv6_preference_title">

        <EditTextPreference
            android:inputType="numberDecimal"
            app:defaultValue="@string/default_wired_source_port_ipv6"
            app:key="@string/wired_source_port_ipv6_key"
            app:summary="@string/wired_source_port_ipv6_summary"
            app:title="@string/wired_source_port_ipv6_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="textUri"
            app:defaultValue="@string/default_wired_nexthop_ipv6"
            app:key="@string/wired_nexthop_ipv6_key"
            app:summary="@string/wired_nexthop_ipv6_summary"
            app:title="@string/wired_nexthop_ipv6_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="numberDecimal"
            app:defaultValue="@string/default_wired_nexthop_port_ipv6"
            app:key="@string/wired_nexthop_port_ipv6_key"
            app:summary="@string/wired_nexthop_port_ipv6_summary"
            app:title="@string/wired_nexthop_port_ipv6_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>