<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="wifi"
        app:title="@string/wired_preference_title">

        <Preference
            app:key="@string/wired_ipv4_preferences_key"
            app:fragment="com.cisco.hicn.forwarder.preferences.WiredIPv4PreferencesFragment"
            app:title="@string/wired_ipv4_preferences_summary"
            app:summary="@string/wired_ipv4_preferences_summary"/>


        <Preference
            app:key="@string/wired_ipv6_preferences_key"
            app:fragment="com.cisco.hicn.forwarder.preferences.WiredIPv6PreferencesFragment"
            app:title="@string/wired_ipv6_preferences_summary"
            app:summary="@string/wired_ipv6_preferences_summary" />

    </PreferenceCategory>

</PreferenceScreen>